[tool.poetry]
name = "ib-rc"
version = "0.1.0"
description = "Random posting bot"
authors = ["averagepythonfan <djonvorobei@bk.ru>"]
readme = "README.md"
packages = [{include = "ib_rc"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.bot.dependencies]
aiogram = "^3.1.1"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
celery = "^5.3.4"
redis = "^5.0.1"
flower = "^2.0.1"


[tool.poetry.group.dev.dependencies]
polars = "^0.19.9"


[tool.poetry.group.poster.dependencies]
sqlalchemy = "^2.0.22"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
